Komentarer och göra klart intresse sida
La till komentarer i css och html. La till mer text och bilder i intressen sidan. Kvar att göra är fixa storlek på bilder och storlek på text i intresse sida.

--- a/documentation.html
+++ b/documentation.html
@@ -15,6 +15,7 @@
             <a class="active" href="documentation.html">Dokumentation</a>
         </nav>
         <h1>Dokumentation</h1>
+        <!--Klassen "center" är till för att centrera text till mitten på sidan och så att font-size blir 17px-->
         <p class="center">Det som har varit svårt under uppgiften var att centrera navigations menyn så att den var i mitten av skärmen. (Jag gav upp på detta då jag insåg att jag inte skulle lyckas göra det om jag inte skrev om koden och använde flexbox) 
              <br>Sedan så var det också lite svårt att
               fylla ut alla sidor med saker så att det skulle se bra ut.
