--- a/interests.html
+++ b/interests.html
@@ -18,9 +18,9 @@
         <img class="tate-img" src="Andrew tate.webp">
         <p>En utav mina största intressen är att kolla på Andrew Tate. Han är en person som jag respekterar och känner att jag kan relatera till inom vissa punkter. Andrew Tate är en utav internets mesta kända personer just nu och han pratar om sina åsikter och tanker om samhället just nu och hur han tycker det borde vara.</p>
         <img class="netflix-img" src="netflix.jpeg">
-        <p>Ett annat intresse jag har är att kolla på film och serier under fritiden. Jag kollar oftast på action och komedier.</p>
+        <p class="text-border">Ett annat intresse jag har är att kolla på film och serier under fritiden. Jag kollar oftast på action och komedier.</p>
         <br>
-        <p>Förutom att kolla på filmer och Andrew Tate gymmar jag även. Jag gymmar på Nordic Wellness för att det är det bästa gymmet i Kungälv. Mitt mål med gymmandet är såklart att bli starkare men man känner ju också att man mår bättre efter man har gymmat.</p>
+        <p class="text-border">Förutom att kolla på filmer och Andrew Tate gymmar jag även. Jag gymmar på Nordic Wellness för att det är det bästa gymmet i Kungälv. Mitt mål med gymmandet är såklart att bli starkare men man känner ju också att man mår bättre efter man har gymmat.</p>
     </body>
 </html>
 
